@@ -1,4 +1,4 @@
-*vifm.txt*    For Vifm version 0.7.7  Last change: 2014 October 5
+*vifm-app.txt*    For Vifm version 0.7.7  Last change: 2014 October 5
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -3580,39 +3580,7 @@ support of using vifm as a single-instance application.
 --------------------------------------------------------------------------------
 *vifm-plugin*
 
-vifm-plugin for using vifm in vim as a file selector.
-
-Commands:
-
-  :EditVifm   select a file or files to open in the current buffer.
-  :SplitVifm  split buffer and select a file or files to open.
-  :VsplitVifm vertically split buffer and select a file or files to open.
-  :DiffVifm   select a file or files to compare to the current file with
-              :vert diffsplit.
-  :TabVifm    select a file or files to open in tabs.
-
-Each command accepts up to two arguments: left pane directory and right pane
-directory.  After arguments are checked, vifm process is spawned in a special
-"file-picker" mode.  To pick files just open them either by pressing l, i or
-Enter keys, or by running :edit command.  If no files are selected, file
-under the cursor is opened, otherwise whole selection is passed to the plugin
-and opened in vim.
-
-The plugin have only two settings.  It's a string variable named g:vifm_term to
-let user specify command to run gui terminal.  By default it's equal to
-'xterm -e'.  And another string variable named g:vifm_exec, which equals "vifm"
-by default and specifies path to vifm's executable.  To pass arguments to
-vifm use g:vifm_exec_args, which is empty by default.
-
-To use the plugin copy the vifm.vim file to either the system wide vim/plugin
-directory or into ~/.vim/plugin.
-
-If you would prefer not to use the plugin and it is in the system wide plugin
-directory add
-
-let loaded_vifm=1
-
-to your ~/.vimrc file.
+See |vifm-plugin.txt|.
 
 --------------------------------------------------------------------------------
 *vifm-reserved*
@@ -3643,6 +3611,8 @@ See |vifm-startup| section above for more details.
 
 --------------------------------------------------------------------------------
 *vifm-see-also*
+
+Vim plugin documentation: |vifm-plugin.txt|
 
 Website: http://vifm.info/
 Wiki: http://wiki.vifm.info/
